--- a/tp7-demo1-patients-Spring-MVC-Thymeleaf/src/main/resources/application.properties
+++ b/tp7-demo1-patients-Spring-MVC-Thymeleaf/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-#spring.datasource.url=jdbc:h2:mem:patientmvc-db
+#spring.datasource.url=jdbc:h2:mem:pat_db
 #spring.h2.console.enabled=true
 server.port=8082
 spring.datasource.url=jdbc:mysql://localhost:3306/PAT_DB?createDatabaseIfNotExist=true
@@ -8,3 +8,4 @@ spring.jpa.hibernate.ddl-auto = create
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MariaDBDialect
 spring.jpa.show-sql=true
 spring.thymeleaf.cache=false
+spring.main.allow-circular-references = true
